# errortools

./: .black  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS_PREVIEW.md  AUTHORS.txt  CLA.md  ChangeLog.md  LICENSE.txt  PHILOSOPHY.md  README.md  TODO.md  build.bat  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.agents/: AGENTS_CHECK_LIST.md  AGENTS_PREVIEW.md  README.md
.agents/skills/: README.md  add-cli-flag.md  add-decorator.md  add-exception-class.md  add-public-api.md  add-subcommand.md  add-warning-class.md  bump-version.md  deprecate-public-name.md  fix-flake8-mypy.md  optimize-hot-path.md  update-changelog.md  update-docs.md  write-tests.md
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  cla.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: add_label.md  bug_report.md  config.yml  docs.md  feature_request.md  performance.md  refactor.md
.github/workflows/: auto-awaiting-merge.yml  auto-changelog.yml  auto-comment.yml  auto-delete-branch.yml  auto-label.yml  autoflake-check.yml  block-merge-if-label.yml  build-compile.yml  cla-bot.yml  cli-test.yml  code-complexity.yml  docs.yml  lint-test.yml  lock-threads.yml  pep8-check.yml  readthedocs.yml  run-tests.yml  type-check.yml
_errortools/: __main__.py  _cli.py  _metadata.py  _speedup.c  _traceback.py  _types.py  _version.py  abc.py  cache.py  cli.py  const.py  errno.py  future.py  groups.py  ignore.py  metadata.py  partial.py  plugins.py  raises.py  types.py  typing.py  version.py
_errortools/_logger_shell/: __init__.py  __main__.py  banner.py  prelude.py
_errortools/cached/: __init__.py  cache.py
_errortools/classes/: abc.py  errorcodes.py  group.py  protocol.py  warn.py  wrapper.py
_errortools/classes/base/: base.py  group.py
_errortools/classes/methods/: __init__.py  errordelattr.py  errorsetattr.py
_errortools/decorator/: __init__.py  cache.py  deprecated.py  handlers.py  retry.py  timeout.py
_errortools/descriptor/: __init__.py  base.py  errormsg.py  nonblankmsg.py
_errortools/logging/: __init__.py  base.py  level.py  logger.py  record.py  sink.py
_errortools/methods/: __init__.py  errorattr.py  errordelattr.py  errorhasattr.py  errorsetattr.py
_errortools/plugins/: safe_ignore.py
_errortools/tools/: __init__.py  _warps.py  error_msg.py  print_mro.py
_errortools/traceback/: __init__.py  _color_codes.py  _config.py  _init.py
_errortools/wrappers/: cache.py  ignore.py
docs/: _toc.yml  api-reference.md  cli.md  conf.py  core-features.md  decorators.md  examples.md  exception-handling.md  future-module.md  index.md  installation.md  mascot.md  plugins.md  quickstart.md  requirements.txt  warnings.md
docs/api_reference/: index.md  version.md
docs/cli_tools/: index.md
docs/emeps/: emep1.md  index.md
docs/examples/: index.md
docs/extending/: index.md  plugins.md
docs/faq/: index.md  mascot.md
docs/getting_started/: core-features.md  index.md  quickstart.md
docs/user_guide/: custom_exceptions.md  exception_handling.md  future_module.md  index.md  logging.md  raising_exceptions.md
docs/whatsnew/: 3_4.md  3_5.md  3_6.md  index.md
emeps/: README.md
emeps/doc/: emep1.md
errortools/: __init__.py  __main__.py  future.py  logging.py  partial.py
errortools_speedbelt/: __init__.py  _ignore_speed.c  _speedup.c  support_c_ext.py
licenses/: LICENSE.txt
reproduce/changelog/: 69.performance.md  README.md
reproduce/sandbox/: README.md  reproduce_issue_69.py
reproduce/used_changelog/: README.md
testing/: __init__.py  __main__.py  run_tests.py  test_data_driven.py  test_decorator.py  test_descriptor.py  test_errno.py  test_groups.py  test_ignore.py  test_logger_shell.py  test_logging.py  test_partials.py  test_plugins.py  test_protocols.py  test_version.py  test_warnings.py
testing/benchmark/: __init__.py  test_future_perf.py  test_ignore_perf.py
testing/classes/: test_abc.py  test_errorcodes.py  test_protocols.py
testing/data/: errno_codes.json  exception_specs.json  loader.py  message_normalization.json  retry_cases.json  suppress_cases.json
testing/data/json/: __init__.py  convert_cases.json  ignore_cases.json  warning_categories.json
testing/doctest/: __init__.py  __main__.py  test_classes.py  test_decorator.py  test_descriptor.py  test_errno.py  test_ignore.py  test_metadata.py  test_plugins.py  test_raises.py  test_version.py
testing/logging/: __init__.py  helper.py  test_format.py  test_level.py  test_logger.py  test_logging_deprecated_file.py  test_record.py  test_sink.py
testing/meta/: __init__.py  test_metadata.py  test_version.py
testing/speedbelt/: test_c_ext_detect.py
testing/submodules/: test_future.py
testing/test_testing/: test_testing.py
tests/: __init__.py  conftest.py  run_tests.py  test_abc.py  test_cache.py  test_const.py  test_decorator.py  test_descriptor.py  test_errno.py  test_errorcodes.py  test_future.py  test_groups.py  test_ignore.py  test_logging.py  test_mixins.py  test_partials.py  test_raises.py  test_typing.py  test_warnings.py
