[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "errortools"
version = "3.1.0"
authors = [
  { name = "Evan Yang", email = "quantbit@126.com" }
]
description = "errortools - a toolset for working with Python exceptions and warnings and logging."
readme = "README.md"
license = { file = "LICENSE" }
url = "https://github.com/more-abc/errortools"
requires-python = ">=3.8"


dependencies = [
  "namebyauthor==1.0.0",
  "typing_extensions>=4.8.0"
]


classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]


[project.entry-points.console_scripts]
logger = "_errortools.cli:main"


[project.package-data]
errortools = ["py.typed"]


[tool.setuptools.packages.find]
where = ["."]


[tool.setuptools.extension]
name = "_errortools._speedup"
sources = ["_errortools/_speedup.c"]


[tool.setuptools.extension.platform]
# Windows: /O2
win32.extra_compile_args = ["/O2"]
# Linux/macOS: -O3 -march=native
linux.extra_compile_args = ["-O3", "-march=native"]
darwin.extra_compile_args = ["-O3", "-march=native"]


[tool.black]
line-length = 120
target-version = ["py314"]


[tool.pytest]
testpaths = ["testing"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = [
    "-v",
    "--color=yes",
    "--cov=_errortools",
    "--cov-report=term",
    "--cov-report=html",
]


[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
files = "_errortools/"
exclude = ["testing/"]


[tool.flake8]
max-line-length = 120
exclude = [
    ".venv",
    "testing",
    "__pycache__",
    "htmlcov",
]
ignore = ["E203", "E501", "W503"]