[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "errortools"
version = "3.2.1"
authors = [
  { name = "Evan Yang", email = "quantbit@126.com" }
]
description = "errortools - a toolset for working with Python exceptions and warnings and logging."
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.8"


dependencies = [
  "namebyauthor==1.0.0",
  "typing_extensions>=4.15.0"
]


classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]


[project.urls]
Homepage = "https://github.com/more-abc/errortools"
Documentation = "https://errortools.readthedocs.io/"


[project.scripts]
logger = "_errortools.cli:main"


[tool.setuptools.package-data]
_errortools = ["py.typed"]


[tool.setuptools.packages.find]
where = ["."]


[[tool.setuptools.ext-modules]]
name = "_errortools._speedup"
sources = ["_errortools/_speedup.c"]


[tool.black]
line-length = 120
target-version = ["py38"]


[tool.pytest.ini_options]
testpaths = ["testing"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = [
    "-v",
    "--color=yes",
    "--cov=_errortools",
    "--cov-report=term",
    "--cov-report=html",
]


[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
files = "_errortools/"
exclude = ["testing/"]
